Fixed menu not showing up on dev + contact form bg

--- a/src/app/pages/contact-page/contact-form/contact-form.component.scss
+++ b/src/app/pages/contact-page/contact-form/contact-form.component.scss
@@ -12,6 +12,14 @@
   padding: 10px;
 }
 
+.form {
+  background: #fff;
+  box-shadow: 5px 7px 30px #484979;
+  padding: 40px;
+  border-radius: 5px;
+  text-align: center;
+}
+
 img {
   height: 100%;
 }
